# deluge-kit-generator

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: generate_kit.rs  main.rs
