[package]
name = "deluge-kit-generator"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bwavfile = "1.1.0"
clap = { version = "4.2.7", features = ["derive"] }
thiserror = "1.0.34"
deluge = { path = "externals/deluge-rs" }
